--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <a class="link" href="https://hgmartist.net" target="_blank">
         <i class="bx bx-globe">&nbsp;</i>Website
       </a>
+      <a class="link" href="https://github.com/HGMServers" target="_blank">
+        <i class="bx bxl-github">&nbsp;</i>GitHub
+      </a>
     </div>
   </body>
 </html>
