Replaced Server Status with Our Servers Page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <a class="link" href="https://discord.gg/HGMServers" target="_blank">
         <i class="bx bxl-discord">&nbsp;</i>Discord
       </a>
-      <a class="link" href="https://hgmservers.com" target="_blank">
-        <i class="bx bxs-server">&nbsp;</i>Server Status
+      <a class="link" href="https://hgmartist.net/our-servers" target="_blank">
+        <i class="bx bxs-server">&nbsp;</i>Our Servers
       </a>
       <a class="link" href="https://cod.hgmservers.com" target="_blank">
         <i class="bx bx-sitemap">&nbsp;</i>Webfront
