Added Server Status Page back

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <a class="link" href="https://hgmartist.net/our-servers" target="_blank">
         <i class="bx bxs-server">&nbsp;</i>Our Servers
       </a>
+      <a class="link" href="https://status.hgmservers.com" target="_blank">
+        <i class="bx bxs-server">&nbsp;</i>Server Status
+      </a>      
       <a class="link" href="https://cod.hgmservers.com" target="_blank">
         <i class="bx bx-sitemap">&nbsp;</i>Webfront
       </a>
